FPM: Fixed major error in triangle inequality

--- a/2020_21/FPM/analysis-notes/notex.tex
+++ b/2020_21/FPM/analysis-notes/notex.tex
@@ -110,7 +110,7 @@
     \begin{enumerate}
         \item \emph{Positive definite}: $|a|\geq 0$. $|a|=0$ if and only if $a=0$.
         \item \emph{Symmetry}: $|a-b|=|b-a|$.
-        \item \emph{Triangle inequality}: $|a+b|\geq |a|+|b|$ and $||a|-|b||\leq |a-b|$.
+        \item \emph{Triangle inequality}: $|a+b|\leq |a|+|b|$ and $||a|-|b||\leq |a-b|$.
     \end{enumerate}
 \end{theorem}
 
